refactored Splash and Hero text to fix spacing.

--- a/fe/src/styles/signup.sass
+++ b/fe/src/styles/signup.sass
@@ -19,7 +19,6 @@
         align-items: center
         justify-content: center
         height: 88vh
-        width: 84vw
         max-width: 480px
         margin-top: 12vh
 
